--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,8 +31,9 @@ pipeline {
                             remote.user = forge
                             remote.identityFile = id_rsa_qc
                             sshCommand remote: remote, command: 'for i in {1..5}; do echo -n \"Loop \$i \"; date ; sleep 1; done'
-                            sshPut remote: remote, from: 'auto-test.sh', into: '/home/forge/releases-plus'
-                            sshScript remote: remote, script: "/home/forge/releases-plus/auto-test.sh"
+                            echo "${env.PWD}/workspace/${env.JOB_NAME}/${workspacePath}"
+                            //sshPut remote: remote, from: 'auto-test.sh', into: '/home/forge/releases-plus'
+                            //sshScript remote: remote, script: "/home/forge/releases-plus/auto-test.sh"
                         }
                     }
                 }   
