--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,6 +26,11 @@ pipeline {
                     remote.host = '52.13.190.167'
                     
                     remote.allowAnyHosts = true
+                    // get the present working directory (PWD)
+                    String PWD = pwd()
+
+                    // based on this, construct the path to the workspace
+                    String workspacePath = PWD.substring(PWD.lastIndexOf('/') + 1, PWD.length())
                     node {
                         withCredentials([sshUserPrivateKey(credentialsId: 'ra-auto-test', keyFileVariable: 'id_rsa_qc', passphraseVariable: '', usernameVariable: 'forge')]) {
                             remote.user = forge
