--- a/jenkinsfile
+++ b/jenkinsfile
@@ -38,7 +38,9 @@ pipeline {
                             sshCommand remote: remote, command: 'for i in {1..5}; do echo -n \"Loop \$i \"; date ; sleep 1; done'
                            
                             //sshPut remote: remote, from: "${env.PWD}/workspace/${env.JOB_NAME}/auto-test.sh", into: '/home/forge/releases-plus/auto-test.sh'
-                            sshScript remote: remote, script: '/releases-plus/auto-test.sh'
+                            dir('releases-plus'){
+                                sshScript remote: remote, script: 'auto-test.sh'
+                            }
                         }
                     }
                 }   
