--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
     
     
     stages {
-        stage('qc auto test') {
+        stage('Build Qc Auto Test') {
             steps{
                 script{
                     def remote = [:]
