--- a/jenkinsfile
+++ b/jenkinsfile
@@ -69,6 +69,7 @@ pipeline {
                     sh 'npm run test'
                 }
                 sh 'node index.js'
+                sh 'cp test/report/cucumber_report.html /var/www/html/index.html'
             }
             
           }
