--- a/jenkinsfile
+++ b/jenkinsfile
@@ -136,10 +136,10 @@ pipeline {
               // you may opt to use the vars in plugins like `slackSend`, etc
           }
         }
-//         stage('Clean') {
-//           steps {
-//             cleanWs()
-//           }
-//         }
+        stage('Clean') {
+          steps {
+            cleanWs()
+          }
+        }
     }
 }
