--- a/jenkinsfile
+++ b/jenkinsfile
@@ -146,9 +146,9 @@ pipeline {
         }
     }
     
-    post {
-        always{
-            slackSend(channel: "real-automation", message: "Here is the report of RA automation: http://18.141.212.1/${REPORT_FILE_NAME}") 
-        }
-    }
+//     post {
+//         always{
+//             slackSend(channel: "real-automation", message: "Here is the report of RA automation: http://18.141.212.1/${REPORT_FILE_NAME}") 
+//         }
+//     }
 }
