--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,26 +26,30 @@ pipeline {
             steps{
                 sh "echo branch name: ${BRANCH_NAME}"
                 sh "echo pull request id: ${CHANGE_ID}"
-//                 script{
-//                     def remote = [:]
-//                     remote.name = 'ra-auto-test'
-//                     remote.host = '52.13.190.167'
-//                     remote.allowAnyHosts = true
-//                     // get the present working directory (PWD)
-//                     String PWD = pwd()
+                
+                script{
+                    def remote = [:]
+                    remote.name = 'ra-auto-test'
+                    remote.host = '52.13.190.167'
+                    remote.allowAnyHosts = true
+                    // get the present working directory (PWD)
+                    String PWD = pwd()
 
-//                     // based on this, construct the path to the workspace
-//                     String workspacePath = PWD.substring(PWD.lastIndexOf('/') + 1, PWD.length())
-//                     node {
-//                         withCredentials([sshUserPrivateKey(credentialsId: 'ra-auto-test', keyFileVariable: 'id_rsa_qc', passphraseVariable: '', usernameVariable: 'forge')]) {
-//                             remote.user = forge
-//                             remote.identityFile = id_rsa_qc
-//                             sshCommand remote: remote, command: 'for i in {1..5}; do echo -n \"Loop \$i \"; date ; sleep 1; done'
+                    // based on this, construct the path to the workspace
+                    String workspacePath = PWD.substring(PWD.lastIndexOf('/') + 1, PWD.length())
+                    node {
+                        withCredentials([sshUserPrivateKey(credentialsId: 'ra-auto-test', keyFileVariable: 'id_rsa_qc', passphraseVariable: '', usernameVariable: 'forge')]) {
+                            remote.user = forge
+                            remote.identityFile = id_rsa_qc
+                            writeFile(file: 'branch.txt', text: "${BRANCH_NAME}")
+                            writeFile(file: 'change-id.txt', text: "${CHANGE_ID}")
+                            sshPut remote: remote, from: 'branch.txt', into: '/home/forge/releases-plus/branch.txt'
+                            sshPut remote: remote, from: 'change-id.txt', into: '/home/forge/releases-plus/change-id.txt'
 //                             sshScript remote: remote, script: "${env.PWD}/workspace/${env.JOB_NAME}/auto-test.sh"
                             
-//                         }
-//                     }
-//                 }   
+                        }
+                    }
+                }   
             }
         }
 //         stage('Clone the repo') {
